Deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot
      version: v1
  template:
    metadata:
      labels:
        app: spring-boot
        version: v1
    spec:
      containers:
      - name: spring-boot
        image: apoorvar12/spring-boot:v2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"


---
#service 

apiVersion: v1
kind: Service
metadata:
  name: springboot-svc-v1
spec:
  selector:
    app: spring-boot
    version: v1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
