Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-boot
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
      - name: spring-boot
        image: apoorvar12/spring-boot:17
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"


---
kind: Service
apiVersion: v1
metadata:
  name: springboot-svc
spec:
  selector:
    app: spring-boot
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: ClusterIP
