ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:289835835122:certificate/10539c93-ceed-413d-a0fe-362b439fc5f9

    alb.ingress.kubernetes.io/actions.canary: >
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"springboot-svc-v1",
              "servicePort":"8080",
              "weight":0
            },
            {
              "serviceName":"springboot-svc-v2",
              "servicePort":"8080",
              "weight":100
            }
          ]
        }
      }

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary
            port:
              name: use-annotation
